# qa-automation-suite

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  module_selector.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: test.yml
config/: config.yaml
docs/: USAGE.md
tests/: conftest.py
tests/api/: test_api_example.py
tests/app/: __init__.py  conftest.py  test_app_example.py
tests/functional/: __init__.py  conftest.py  test_dashboard_functional.py  test_login_functional.py
tests/functional/pages/: __init__.py  base_page.py  dashboard_page.py  login_page.py
tests/performance/: locustfile.py
tests/web/: __init__.py  test_page.html  test_web_example.py
utils/: common.py  config.py  data_handler.py  logger.py  report.py  screenshot.py
